src/app/side-nav/side-nav.component.scss
.custom-placeholder {
    background: #ccc;
    border: dotted 3px #999;
    min-height: 30px;
    border-radius: 5px;
    width: 450px;
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.fade-out {
    opacity: 0 !important;
    pointer-events: none;
    //display: none !important;
}

.add-video-btn:hover {
    background-color: #35383d;
}

.cut-text {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    display: inline-block;
    width: 100%;
}

.playlist-element {
    min-height: 30px;
    line-height: 30px;
    text-align: left;
    min-width: 400px;
    font-size: 14px;
}

.dreck-tooltip:hover>.dreck-tooltiptext {
    opacity: 1;
}

.statusbtn {
    transition: color 0.5 ease;
    font-size: 20px;
    display: block;
    padding-bottom: 5px;
    text-align: center;
}

.dreck-tooltiptext {
    transition: opacity 0.5s ease;
    opacity: 0;
    box-shadow: 0px 0px 5px 0.5px rgba(0, 0, 0, 0.8);
    background-color: #2c2f33;
    color: #fff;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    min-width: 100px;
    margin-left: 25px;
    z-index: 1;
    pointer-events: none;
}

.add-video-fade {
    transition: opacity 0.5s ease;
    opacity: 1;
    position: absolute;
    margin-left: 35px;
    margin-top: -40px;
    z-index: 1;
}

.add-playlist-fade {
    transition: opacity 0.5s ease;
    opacity: 1;
    box-shadow: 0px 0px 5px 0.5px rgba(0, 0, 0, 0.8);
    background-color: #2c2f33;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    margin-left: 35px;
    margin-top: -40px;
    z-index: 1;
}

.playlist-btn:hover~.playlist-preview {
    opacity: 1 !important;
}

.fa.pointer:hover {
    transition: opacity 0.25s ease;
    opacity: 0.75;
}

.badge-dreck {
    background-color: #2c2f33;
    box-shadow: 0px 0px 5px 0.5px rgba(0, 0, 0, 0.8)
}

.block {
    display: block;
}

.status-box {
    opacity: 0.9;
    transition: 0.5s opacity ease;
    //border-left: 2px solid #444a70;
    border-radius: 15px;
    position: fixed;
    top: 75px;
    left: 9px;
    padding: 10px 8px;
    z-index: 10;
}

.cdk-drag-preview {
    box-sizing: border-box;
    border-radius: 4px;
    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
    opacity: 0;
}

.cdk-drag-animating {
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.playlist-element.cdk-drop-list-dragging .playlist-element:not(.cdk-drag-placeholder) {
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

